--- a/calarieapp/requirements.txt
+++ b/calarieapp/requirements.txt
@@ -1,16 +1,45 @@
-streamlit==1.38.0
-pillow==10.4.0
-python-dotenv==1.0.1
-langchain-groq==0.1.9
-transformers==4.44.2
-torch==2.4.1
-torchvision==0.19.1
-opencv-python==4.10.0.84
-numpy==1.26.4
-matplotlib==3.9.2
-fpdf==1.7.2
-captum==0.7.0
-lime==0.2.0.1
-pandas==2.2.3
-numexpr==2.10.1
 langchain
+python-dotenv
+ipykernel
+langchain-community
+pypdf
+bs4
+arxiv
+pymupdf
+wikipedia 
+langchain-text-splitters
+langchain-openai
+chromadb
+sentence_transformers
+langchain_huggingface
+faiss-cpu
+langchain_chroma
+duckdb
+pandas
+openai
+langchain-groq
+duckduckgo-search
+pymupdf
+arxiv
+wikipedia
+mysql-connector-python
+SQLAlchemy
+validators==0.28.1
+youtube_transcript_api
+unstructured
+pytube
+numexpr
+huggingface_hub
+gradio
+Pillow
+streamlit
+transformers
+torchvision
+matplotlib 
+fpdf
+SpeechRecognition
+accelerate 
+peft
+captum 
+lime 
+opencv-python
