--- a/calarieapp/requirements.txt
+++ b/calarieapp/requirements.txt
@@ -38,3 +38,8 @@ lime
 opencv-python-headless
 numexpr
 duckduckgo-search
+ultralytics 
+timm
+ efficientnet-pytorch 
+ tensorflow 
+ tensorflow-hub
