--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,45 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-pillow==10.1.0
-pydantic==2.5.0
-python-dotenv==1.0.0
-langchain-groq==0.0.1
-transformers==4.36.0
-torch==2.1.0
-torchvision==0.16.0
-numpy==1.24.3
-opencv-python==4.8.1.78
-matplotlib==3.8.2
-captum==0.6.0
-lime==0.2.0.1
-ultralytics==8.0.206
-streamlit==1.28.1
+langchain
+python-dotenv
+ipykernel
+langchain-community
+pypdf
+
+pymupdf
+
+
+
+
+faiss-cpu
+
+pandas
+
+langchain-groq
+
+pymupdf
+
+validators==0.28.1
+
+
+pytube
+
+ultralytics
+gradio
+Pillow
+streamlit
+transformers
+torchvision
+matplotlib 
+fpdf
+
+accelerate 
+peft
+captum 
+lime 
+opencv-python-headless
+numexpr
+duckduckgo-search
+ultralytics 
+timm
+ efficientnet-pytorch 
+ tensorflow 
+ tensorflow-hub
