--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,64 @@
+# Virtual environment
 venv/
+env/
+ENV/
+
+# Environment variables and secrets
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+*.env
+
+# API keys and secrets
+*.key
+*.secret
+secrets.json
+config.json
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
