--- a/requirements.txt
+++ b/requirements.txt
@@ -3,43 +3,31 @@ python-dotenv
 ipykernel
 langchain-community
 pypdf
-
 pymupdf
-
-
-
-
 faiss-cpu
-
 pandas
-
 langchain-groq
-
-pymupdf
-
 validators==0.28.1
-
-
 pytube
-
 ultralytics
 gradio
 Pillow
 streamlit
 transformers
 torchvision
-matplotlib 
+matplotlib
 fpdf
-
-accelerate 
+accelerate
 peft
-captum 
-lime 
+captum
+lime
 opencv-python-headless
 numexpr
 duckduckgo-search
-ultralytics 
 timm
- efficientnet-pytorch 
- tensorflow 
- tensorflow-hub
+efficientnet-pytorch
+tensorflow
+tensorflow-hub
+seaborn
+plotly
+numpy
