--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,6 @@ pymupdf>=1.23.0
 faiss-cpu>=1.7.4
 validators==0.28.1
 pytube>=15.0.0
-fpdf>=2.7.0
+fpdf2>=2.7.0
 numexpr>=2.8.0
 duckduckgo-search>=4.1.0
