--- a/AlCalorieApp-Cloud/requirements.txt
+++ b/AlCalorieApp-Cloud/requirements.txt
@@ -24,6 +24,9 @@ matplotlib>=3.7.0,<4.0.0
 seaborn>=0.12.0,<1.0.0
 plotly>=5.15.0,<6.0.0
 
+# Web requests for enhanced agent
+requests>=2.25.0,<3.0.0
+
 # Model interpretability (optional - will be handled gracefully)
 captum>=0.6.0,<1.0.0
 lime>=0.2.0,<1.0.0
