--- a/food-analyzer-frontend/package.json
+++ b/food-analyzer-frontend/package.json
@@ -21,6 +21,8 @@
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^6.30.1",
     "recharts": "^3.1.2"
   },
   "devDependencies": {
