--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "alcalorieapp-monorepo",
+  "name": "alcalorieapp",
   "version": "1.0.0",
   "description": "AI-powered food analysis application with frontend and backend",
   "private": true,
-  "workspaces": [
-    "food-analyzer-frontend",
-    "food-analyzer-backend"
-  ],
   "scripts": {
     "build": "npm run build:backend && npm run build:frontend",
     "build:backend": "cd food-analyzer-backend && npm run build",
