--- a/food-analyzer-backend/python_models/requirements.txt
+++ b/food-analyzer-backend/python_models/requirements.txt
@@ -9,6 +9,10 @@ Pillow>=9.0.0
 opencv-python>=4.8.0
 numpy>=1.24.0
 
+# Web Framework
+Flask>=2.3.0
+Flask-CORS>=4.0.0
+
 # Utilities
 requests>=2.31.0
 tqdm>=4.65.0
