--- a/food-analyzer-backend/package.json
+++ b/food-analyzer-backend/package.json
@@ -43,7 +43,9 @@
     "path": "^0.12.7",
     "stream": "^0.0.2",
     "buffer": "^6.0.3",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "@langchain/groq": "^0.1.3",
+    "@langchain/core": "^0.2.21"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
