--- a/food-analyzer-backend/package.json
+++ b/food-analyzer-backend/package.json
@@ -45,9 +45,7 @@
     "buffer": "^6.0.3",
     "util": "^0.12.5",
     "@langchain/groq": "^0.1.3",
-    "@langchain/core": "^0.2.21"
-  },
-  "devDependencies": {
+    "@langchain/core": "^0.2.21",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/compression": "^1.7.5",
@@ -56,13 +54,15 @@
     "@types/uuid": "^9.0.7",
     "@types/node": "^20.8.0",
     "@types/joi": "^17.2.3",
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "ts-node-dev": "^2.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
