--- a/food-analyzer-backend/python_models/requirements_optimized.txt
+++ b/food-analyzer-backend/python_models/requirements_optimized.txt
@@ -10,7 +10,7 @@ torch>=2.0.0
 torchvision>=0.15.0
 
 # Transformers (essential only)
-transformers>=4.30.0
+transformers>=4.35.0
 
 # YOLO (latest stable)
 ultralytics>=8.0.0
@@ -18,6 +18,9 @@ ultralytics>=8.0.0
 # Utilities
 numpy>=1.24.0
 requests>=2.31.0
+
+# Production WSGI server
+gunicorn>=21.0.0
 
 # Optional: Remove heavy dependencies for faster deployment
 # opencv-python>=4.8.0  # Commented out - use Pillow instead
