--- a/food-analyzer-backend/python_models/requirements_simple.txt
+++ b/food-analyzer-backend/python_models/requirements_simple.txt
@@ -1,4 +1,7 @@
-# Minimal requirements for simple Flask app
-Flask>=2.3.0
-Flask-CORS>=4.0.0
-Pillow>=9.0.0
+   flask==2.3.3
+   flask-cors==4.0.0
+   pillow==10.0.1
+   ultralytics==8.0.196
+   torch==2.0.1
+   torchvision==0.15.2
+   numpy==1.24.3
