--- a/food-analyzer-backend/python_models/requirements_cpu.txt
+++ b/food-analyzer-backend/python_models/requirements_cpu.txt
@@ -7,9 +7,10 @@ Pillow>=9.0.0
 opencv-python>=4.8.0
 numpy>=1.24.0
 
-# ML libraries (standard versions for Render)
-torch>=2.0.0
-torchvision>=0.15.0
+# ML libraries (CPU optimized using proper method)
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.0.0+cpu
+torchvision==0.15.0+cpu
 transformers>=4.30.0
 ultralytics>=8.0.0
 
