--- a/AlCalorieApp-Cloud/requirements.txt
+++ b/AlCalorieApp-Cloud/requirements.txt
@@ -11,6 +11,9 @@ langchain>=0.1.0,<1.0.0
 langchain-community>=0.0.10,<1.0.0
 langchain-groq>=0.0.1,<1.0.0
 
+# GROQ API for diet reports
+groq>=0.4.0,<1.0.0
+
 # Computer Vision (YOLO11m)
 ultralytics>=8.0.0,<9.0.0
 opencv-python-headless>=4.8.0,<5.0.0
